--- a/项目中遇到的问题.md
+++ b/项目中遇到的问题.md
@@ -11,6 +11,7 @@ components/ 不行 要用./components
 2. 优化页面抖动现象，加入keep-alive组件缓存dom，以及调用destroy生命周期函数，清除定时器
 3. betterscroll计算高度的时候，会受异步加载顺序的影响。导致划不到底部，可以减去图片的高度，但是如果resize的话，就会出问题。所以监听图片，调用refresh方法，但是多个图片都要refresh吗？减少浪费。加个限制 这个要深入思考
 4. 性能优化，图片请求很多，只请求首屏图片，懒加载。vue-lazyload
+5. 组件异步加载，减少app.js的大小，利用codesplitting
 
 todo 
 解决3x图的问题
